@@ -10,7 +10,6 @@
 .tar.gz$
 .bak$
 .swp$
-^test/
 .hg/
 .hgignore$
 ^_build/
