@@ -86,6 +86,11 @@ sub register_pin {
     my ($self, $pin) = @_;
 
     my $gpio_num = $self->pin_to_gpio($pin->num);
+
+    if (defined $ENV{RPI_PINS} && grep {$gpio == $_} split /,/, $pins_in_use){
+        die "\npin $pin_num is already in use... can't re-register it\n";
+    }
+
     $ENV{RPI_PINS} = ! defined $ENV{RPI_PINS}
         ? $gpio_num
         : "$ENV{RPI_PINS},$gpio_num";
